@@ -729,18 +729,21 @@ get_contents_win32 (const gchar *filename,
  * g_file_get_contents:
  * @filename: name of a file to read contents from, in the GLib file name encoding
  * @contents: location to store an allocated string
- * @length: location to store length in bytes of the contents
- * @error: return location for a #GError
+ * @length: location to store length in bytes of the contents, or %NULL
+ * @error: return location for a #GError, or %NULL
  * 
  * Reads an entire file into allocated memory, with good error
- * checking. If @error is set, %FALSE is returned, and @contents is set
- * to %NULL. If %TRUE is returned, @error will not be set, and @contents
- * will be set to the file contents.  The string stored in @contents
- * will be nul-terminated, so for text files you can pass %NULL for the
- * @length argument.  The error domain is #G_FILE_ERROR. Possible
- * error codes are those in the #GFileError enumeration.
+ * checking. 
  *
- * Return value: %TRUE on success, %FALSE if error is set
+ * If the call was successful, it returns %TRUE and sets @contents to the file 
+ * contents and @length to the length of the file contents in bytes. The string 
+ * stored in @contents will be nul-terminated, so for text files you can pass 
+ * %NULL for the @length argument. If the call was not successful, it returns 
+ * %FALSE and sets @error. The error domain is #G_FILE_ERROR. Possible error  
+ * codes are those in the #GFileError enumeration. In the error case, 
+ * @contents is set to %NULL and @length is set to zero.
+ *
+ * Return value: %TRUE on success, %FALSE if an error occurred
  **/
 gboolean
 g_file_get_contents (const gchar *filename,
